# poly-once

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: async_init.rs  basic_sync.rs  fallible_init.rs
src/: lib.rs  once.rs  state.rs  transform_once.rs
tests/: once.rs  transform_once.rs
